--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /JavaApplication2/nbproject/private/
 /Heroes-of-Hordo/nbproject/private/
 /heroes_of_hordo/nbproject/private/
+/heroes_of_hordo/build/
