--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,9 @@
 /Heroes-of-Hordo/nbproject/private/
 /heroes_of_hordo/nbproject/private/
 /heroes_of_hordo/build/
+/heroes_of_hordo/src/heroesofhordo/heroesofhordo/nbproject/private/
+/heroes_of_hordo/src/heroesofhordo/heroes_of_hordo/nbproject/private/
+/heroes_of_hordo/heroes_of_hordo/nbproject/private/
+/heroes_of_hordo/heroes_of_hordo/build/
+/heroesofhordo/nbproject/private/
+/heroesofhordo/build/
